tracking.ipynb: split text into multiple text cells so heading collapsing works.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -3,7 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": [
+        "7c1gbeVrFHUu"
+      ],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,7 +23,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# VGG Chimpanzee tracking\n",
+        "# VGG Chimpanzee Tracking\n",
         "\n",
         "This project provides an interface to track chimpanzees in the wild.\n",
         "It will detect the chimpanzees in video files.  It is based in the\n",
@@ -40,7 +44,13 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 1 - Read Me First\n"
+        "## 1 - Read Me First\n",
+        "\n",
+        "This project is a [Jupyter](https://jupyter.org/) notebook to track\n",
+        "chimpanzees in the wild and was designed to run in [Google\n",
+        "Colab](https://colab.research.google.com/).  If you are not reading\n",
+        "this notebook in Google Colab, click\n",
+        "[here](https://colab.research.google.com/github/ox-vgg/chimpanzee-tracking/blob/main/tracking.ipynb).\n"
       ],
       "metadata": {
         "id": "O3vImnLxFHUf"
@@ -49,13 +59,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This project is a [Jupyter](https://jupyter.org/) notebook to track\n",
-        "chimpanzees in the wild and was designed to run in [Google\n",
-        "Colab](https://colab.research.google.com/).  If you are not reading\n",
-        "this notebook in Google Colab, click\n",
-        "[here](https://colab.research.google.com/github/ox-vgg/chimpanzee-tracking/blob/main/tracking.ipynb).\n",
-        "\n",
-        "\n",
         "### 1.1 - What is, and how to use, a Jupyter notebook\n",
         "\n",
         "A Jupyter notebook is a series of \"cells\".  Each cell contains either\n",
@@ -66,16 +69,28 @@
         "When you click the \"Run cell\" button, the code in that cell will run\n",
         "and when it finishes, a green check mark appears next to the \"Run\n",
         "cell\" button\".  You need to wait for the code in that cell to finish\n",
-        "before \"running\" the next cell.\n",
-        "\n",
-        "\n",
+        "before \"running\" the next cell.\n"
+      ],
+      "metadata": {
+        "id": "-tfDPTizFHUi"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### 1.2 - Particulars of this notebook\n",
         "\n",
         "This notebook was designed to run in Google Colab and to analyse\n",
         "videos in Google Drive.  It will also save back the analysis results\n",
-        "in Google Drive.  As such, it requires a Google account.\n",
-        "\n",
-        "\n",
+        "in Google Drive.  As such, it requires a Google account.\n"
+      ],
+      "metadata": {
+        "id": "4kkvU97kDjYh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### 1.3 - Results files\n",
         "\n",
         "This notebook will save all the results in a single directory.  It\n",
@@ -97,9 +112,15 @@
         "- `tracks.mp4` - video with tracks (see Section 6).\n",
         "\n",
         "Note that none of those files includes the video filename.  As such,\n",
-        "our recommendation is to create a results directory for each video.\n",
-        "\n",
-        "\n",
+        "our recommendation is to create a results directory for each video.\n"
+      ],
+      "metadata": {
+        "id": "iXk_VjsyDmtS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### 1.4 - GPU access\n",
         "\n",
         "A GPU is required to run this pipeline in a sensible manner.  For\n",
@@ -110,10 +131,16 @@
         "possible that you were not allocated one, typically because you've\n",
         "used up all your GPU resources.  You can confirm this, and possibly\n",
         "change it, manually.  To do that, navigate to \"Edit\" -> \"Notebook\n",
-        "Settings\" and select \"GPU\" from the \"Hardware Accelerator\" menu.\n",
-        "\n",
-        "\n",
-        "### 1.4 - Moving forward\n",
+        "Settings\" and select \"GPU\" from the \"Hardware Accelerator\" menu.\n"
+      ],
+      "metadata": {
+        "id": "vuE9bu6GDpOv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1.5 - Moving forward\n",
         "\n",
         "You can run this notebook on Google Colab but if you have a large\n",
         "collection of videos or if your videos are particularly long, you may\n",
@@ -123,7 +150,7 @@
         "Colab Plans](https://colab.research.google.com/signup).\n"
       ],
       "metadata": {
-        "id": "-tfDPTizFHUi"
+        "id": "AU4JuuRqDrxQ"
       }
     },
     {
@@ -136,10 +163,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.1 - Check for GPU access\n"
+      ],
+      "metadata": {
+        "id": "z9eagfzTBgMh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@markdown ### 2.1 - Check for GPU access\n",
-        "\n",
         "#@markdown By default, this notebook will run with a GPU.  However, it\n",
         "#@markdown is possible that you were not allocated one.  If you get a\n",
         "#@markdown message saying that you do not have access to a GPU,\n",
@@ -166,9 +200,20 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.2 - Install and load dependencies\n"
+      ],
+      "metadata": {
+        "id": "0jKiMdsdBpQO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@markdown ### 2.2 - Install and load dependencies\n",
+        "#@markdown\n",
+        "\n",
+        "#^ this @markdown above is just so that we can set cellView to form\n",
         "\n",
         "import contextlib\n",
         "import glob\n",
@@ -241,10 +286,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.3 - Mount Google Drive\n"
+      ],
+      "metadata": {
+        "id": "chRTgjgMCJdd"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@markdown ### 2.3 - Mount Google Drive\n",
-        "\n",
         "#@markdown When you run this cell, a dialog will appear about a\n",
         "#@markdown request for access to your Google Drive Files.  This is\n",
         "#@markdown required to access the videos for analysis and to then save\n",
@@ -262,10 +314,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 2.4 - Video file and results folder\n"
+      ],
+      "metadata": {
+        "id": "lb_oICb3CPpC"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@markdown ### 2.4 - Video File and Results Folder\n",
-        "\n",
         "#@markdown To find the correct path, open the \"Files\" menu in the left\n",
         "#@markdown sidebar.  The `drive` directory contains your Google Drive\n",
         "#@markdown files.  Navigate the files, right click on the wanted file\n",
@@ -285,13 +344,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 2.5 - Advanced Options\n",
+        "### 2.5 - Advanced options\n",
         "\n",
-        "The cells hidden in this section configure the pipeline and includes\n",
-        "the advanced options.  In most cases you do not need to change them\n",
-        "and can collapse them (click on the arrow drop down on the left side\n",
-        "of this cell) and then click the \"Run cell\" to run all of the\n",
-        "collapsed cells in one go.\n"
+        "The cells hidden in this section expose the advanced options for this\n",
+        "pipeline and perform the final setup.  In most cases you do not need\n",
+        "to change their values.  You can click the \"Run cell\" button to run\n",
+        "all the hidden cells inside.\n"
       ],
       "metadata": {
         "id": "7c1gbeVrFHUu"
@@ -300,7 +358,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown #### 2.5.1 - Chimpanzee Detection\n",
+        "#@markdown #### 2.5.1 - Chimpanzee detection\n",
         "\n",
         "#@markdown The detection step is the first step.  It detects the\n",
         "#@markdown location of chimpanzees without attempting to identify who\n",
@@ -334,7 +392,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown #### 2.5.2 - Chimpanzee Tracking\n",
+        "#@markdown #### 2.5.2 - Chimpanzee tracking\n",
         "\n",
         "#@markdown The final step is to track the detected chimpanzees in the\n",
         "#@markdown video.\n",
@@ -374,7 +432,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#@markdown #### 2.5.4 - The Final Setup Step\n",
+        "#@markdown #### 2.5.4 - The final setup step\n",
         "\n",
         "#@markdown Run this cell to perform the final pipeline setup based on\n",
         "#@markdown the given options.\n",
@@ -922,7 +980,7 @@
         "            color=(0, 0, 0),\n",
         "            lineType=cv2.LINE_AA,\n",
         "        )\n",
-        "        cv2.imwrite(os.path.join(out_frames_dir, row.frame_filename), img)"
+        "        cv2.imwrite(os.path.join(out_frames_dir, row.frame_filename), img)\n"
       ],
       "metadata": {
         "cellView": "form",
@@ -1088,10 +1146,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.1 - Visualise in Google Colab (option 1)\n"
+      ],
+      "metadata": {
+        "id": "LL5er1FZCiBo"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@markdown ### 6.1 - Visualise in Google Colab (option 1)\n",
-        "\n",
         "#@markdown You can see the tracking results right here, inside this\n",
         "#@markdown Google Colab notebook, but the interface is a bit slow.\n",
         "#@markdown This is fine if you want to have a quick look at some of\n",
@@ -1116,8 +1181,15 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 6.2 - Visualise locally with VIA (option 2)\n",
-        "\n",
+        "### 6.2 - Visualise locally with VIA (option 2)\n"
+      ],
+      "metadata": {
+        "id": "i5FjIafRC8te"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "[VIA](https://www.robots.ox.ac.uk/~vgg/software/via/) is a web\n",
         "application to view and perform annotations of image, audio, and\n",
         "video.  It is free software and runs locally on the web browser.  You\n",
@@ -1151,10 +1223,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### 6.3 - Create video file with tracks (option 3)\n"
+      ],
+      "metadata": {
+        "id": "5kfdOPAfCpyx"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "#@markdown ### 6.3 - Create Video file with tracks (option 3)\n",
-        "\n",
         "#@markdown You may also generate a video file with the detections\n",
         "#@markdown superimposed.  The video file will be named `tracks.mp4`\n",
         "#@markdown and saved in the `RESULTS_DIRECTORY` in your Google Drive.\n",
@@ -1167,7 +1246,7 @@
         "    )\n",
         "    shutil.move(tmp_tracks_fpath, TRACKS_VIDEO_FPATH)\n",
         "\n",
-        "_logger.info('Video file with tracks created \\'%s\\'', TRACKS_VIDEO_FPATH)"
+        "_logger.info('Video file with tracks created \\'%s\\'', TRACKS_VIDEO_FPATH)\n"
       ],
       "metadata": {
         "cellView": "form",
