tracking.ipynb: add checks and document that form cells need to be run.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -82,7 +82,15 @@
         "\n",
         "This notebook was designed to run in Google Colab and to analyse\n",
         "videos in Google Drive.  It will also save back the analysis results\n",
-        "in Google Drive.  As such, it requires a Google account.\n"
+        "in Google Drive.  As such, it requires a Google account.\n",
+        "\n",
+        "You must run the cells on this notebook one after the other since each\n",
+        "cell is dependent on the results of the previous cell.\n",
+        "\n",
+        "This notebook also some interactive cells, namely in the options\n",
+        "sections.  After setting their values, these cells must be run, just\n",
+        "like other code cells.  Setting their values only has effect after you\n",
+        "\"run\" their cell."
       ],
       "metadata": {
         "id": "4kkvU97kDjYh"
@@ -329,10 +337,21 @@
         "#@markdown sidebar.  The `drive` directory contains your Google Drive\n",
         "#@markdown files.  Navigate the files, right click on the wanted file\n",
         "#@markdown or directory, and select \"Copy path\".  Then paste the path\n",
-        "#@markdown in this form and run this cell.\n",
+        "#@markdown in this form.  Do not forget to then \"run\" this cell.\n",
         "\n",
         "VIDEO_FILE = ''  #@param {type:\"string\"}\n",
-        "RESULTS_DIRECTORY = ''  #@param {type:\"string\"}\n"
+        "RESULTS_DIRECTORY = ''  #@param {type:\"string\"}\n",
+        "\n",
+        "if not VIDEO_FILE:\n",
+        "    raise Exception('VIDEO_FILE is empty, you must set it.')\n",
+        "if not RESULTS_DIRECTORY:\n",
+        "    raise Exception('RESULTS_DIRECTORY is empty, you must set it.')\n",
+        "if not os.path.isfile(VIDEO_FILE):\n",
+        "    raise Exception('The VIDEO_FILE \\'%s\\' does not exist' % VIDEO_FILE)\n",
+        "if not os.path.isdir(RESULTS_DIRECTORY):\n",
+        "    raise Exception(\n",
+        "        'The RESULTS_DIRECTORY \\'%s\\' does not exist' % RESULTS_DIRECTORY\n",
+        "    )"
       ],
       "metadata": {
         "cellView": "form",
@@ -1045,6 +1064,12 @@
         "#@markdown ### 4.1 - Run detection (option 1)\n",
         "\n",
         "video_frames = sorted(glob.glob(os.path.join(FRAMES_DIR, '*.jpg')))\n",
+        "\n",
+        "if len(video_frames) == 0:\n",
+        "    raise Exception(\n",
+        "        \"No files in '%s'.  Did you run the previous section which converts\"\n",
+        "        \" the video to frames?\" % FRAMES_DIR\n",
+        "    )\n",
         "\n",
         "detections, frame_id_to_filename = detect(\n",
         "    video_frames,\n",
