tracking.ipynb: add section with link to sample video for testing.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -99,7 +99,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1.3 - Results files\n",
+        "### 1.3 - Testing this notebook\n",
+        "\n",
+        "We recommend you first test this notebook with a short video, less\n",
+        "than 20 seconds long.  Try our own sample video (download it\n",
+        "[here](https://thor.robots.ox.ac.uk/software/chimpanzee-tracking/test-data/19-mini.mp4)),\n",
+        "and then a video fragment of your own videos."
+      ],
+      "metadata": {
+        "id": "meUaiJq1V-tI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1.4 - Results files\n",
         "\n",
         "This notebook will save all the results in a single directory.  It\n",
         "will generate the following files:\n",
@@ -129,7 +143,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1.4 - GPU access\n",
+        "### 1.5 - GPU access\n",
         "\n",
         "A GPU is required to run this pipeline in a sensible manner.  For\n",
         "example, without a GPU, a two minutes video will take close to two\n",
@@ -148,7 +162,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 1.5 - Moving forward\n",
+        "### 1.6 - Moving forward\n",
         "\n",
         "You can run this notebook on Google Colab but if you have a large\n",
         "collection of videos or if your videos are particularly long, you may\n",
