tracking.ipynb: decode and re-encode audio instead of copying (#1)
When creating a video from the frames and the audio of the original
video, decode and then re-encode the audio to avoid issues with
incompatible format (in issue #1, the original video had pcm audio
which couldn't be muxed in a mp4 video).

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -592,7 +592,7 @@
         "            '-pattern_type', 'glob',\n",
         "            '-i', os.path.join(frames_dir, '*.jpg'),\n",
         "            '-i', in_video_fpath,\n",
-        "            '-c:a', 'copy',\n",
+        "            '-c:a', 'aac',  # https://github.com/ox-vgg/chimpanzee-tracking/issues/1\n",
         "            '-c:v', 'libx264',\n",
         "            '-map', '0:v:0',  # use video from input 0 / stream 0\n",
         "            '-map', '1:a:0',  # use audio from input 1 / stream 0\n",
