tracking.py: use the percent (instead of light) format for the Python scripts.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -999,7 +999,7 @@
         "            color=(0, 0, 0),\n",
         "            lineType=cv2.LINE_AA,\n",
         "        )\n",
-        "        cv2.imwrite(os.path.join(out_frames_dir, row.frame_filename), img)\n"
+        "        cv2.imwrite(os.path.join(out_frames_dir, row.frame_filename), img)"
       ]
     },
     {
@@ -1271,7 +1271,7 @@
         "    )\n",
         "    shutil.move(tmp_tracks_fpath, TRACKS_VIDEO_FPATH)\n",
         "\n",
-        "_logger.info('Video file with tracks created \\'%s\\'', TRACKS_VIDEO_FPATH)\n"
+        "_logger.info('Video file with tracks created \\'%s\\'', TRACKS_VIDEO_FPATH)"
       ]
     }
   ],
