tracking.py: include all video frames when generating video with tracks (#2)
Because we loop over the tracks found to generate the output video
with tracks, frames without detections are not included.  So loop over
all the input frames instead.

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -930,9 +930,7 @@
         "    IPython.display.display(whole_box)\n",
         "\n",
         "\n",
-        "def make_frames_with_tracks(\n",
-        "    csv_fpath: str, in_frames_dir: str, out_frames_dir: str\n",
-        ") -> None:\n",
+        "def draw_tracks_in_img(img, frame_tracks: pd.DataFrame) -> None:\n",
         "    cmap = list(matplotlib.cm.Pastel1.colors)\n",
         "    cmap = [(int(c[0] * 255), int(c[1] * 255), int(c[2] * 255)) for c in cmap]\n",
         "\n",
@@ -940,22 +938,11 @@
         "    font_scale = 1\n",
         "    font_thickness = 1\n",
         "\n",
-        "    img = None\n",
-        "    prev_frame_id = None\n",
-        "\n",
-        "    track_data = pd.read_csv(csv_fpath)\n",
-        "    track_data.sort_values('frame_id', inplace=True)\n",
-        "    for row in track_data.itertuples():\n",
+        "    for row in frame_tracks:\n",
         "        # Some detections have no track.  Do not show them on the\n",
         "        # video.\n",
         "        if row.track_id == UNKNOWN_TRACK_ID_MARKER:\n",
         "            continue\n",
-        "\n",
-        "        # Read image only if this is a different frame, otherwise,\n",
-        "        # keep appending boxes and labels to the previous image.\n",
-        "        if prev_frame_id != row.frame_id:\n",
-        "            img = cv2.imread(os.path.join(in_frames_dir, row.frame_filename))\n",
-        "            prev_frame_id = row.frame_id\n",
         "\n",
         "        colour = cmap[row.track_id % len(cmap)]\n",
         "        label = str(row.track_id)\n",
@@ -999,7 +986,26 @@
         "            color=(0, 0, 0),\n",
         "            lineType=cv2.LINE_AA,\n",
         "        )\n",
-        "        cv2.imwrite(os.path.join(out_frames_dir, row.frame_filename), img)"
+        "\n",
+        "\n",
+        "def make_frames_with_tracks(\n",
+        "    csv_fpath: str, in_frames_dir: str, out_frames_dir: str\n",
+        ") -> None:\n",
+        "    track_data = pd.read_csv(csv_fpath)\n",
+        "    track_data.sort_values('frame_filename', inplace=True)\n",
+        "    track_data.set_index(keys=['frame_filename'], drop=False, inplace=True)\n",
+        "\n",
+        "    for frame_fname in sorted(os.listdir(in_frames_dir)):\n",
+        "        in_fpath = os.path.join(in_frames_dir, frame_fname)\n",
+        "        out_fpath = os.path.join(out_frames_dir, frame_fname)\n",
+        "        frame_tracks  track_data.loc[track_data.frame_filename == frame_fname]\n",
+        "\n",
+        "        if len(frame_tracks) == 0:\n",
+        "            shutil.copy(in_fpath, out_fpath)\n",
+        "        else:\n",
+        "            img = cv2.imread(in_fpath)\n",
+        "            draw_tracks_in_img(img, frame_tracks)\n",
+        "            cv2.imwrite(out_fpath, img)"
       ]
     },
     {
@@ -1080,7 +1086,7 @@
         "with open(DETECTIONS_FPATH, 'wb') as fh:\n",
         "    pickle.dump(\n",
         "        {\n",
-        "            'detections': detections, \n",
+        "            'detections': detections,\n",
         "            'frame_id_to_filename': frame_id_to_filename,\n",
         "        },\n",
         "        fh,\n",
