tracking.py: fix generation of output video with tracks (fixup 6ebbdb3b)

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -938,7 +938,7 @@
         "    font_scale = 1\n",
         "    font_thickness = 1\n",
         "\n",
-        "    for row in frame_tracks:\n",
+        "    for row in frame_tracks.itertuples():\n",
         "        # Some detections have no track.  Do not show them on the\n",
         "        # video.\n",
         "        if row.track_id == UNKNOWN_TRACK_ID_MARKER:\n",
@@ -998,7 +998,7 @@
         "    for frame_fname in sorted(os.listdir(in_frames_dir)):\n",
         "        in_fpath = os.path.join(in_frames_dir, frame_fname)\n",
         "        out_fpath = os.path.join(out_frames_dir, frame_fname)\n",
-        "        frame_tracks  track_data.loc[track_data.frame_filename == frame_fname]\n",
+        "        frame_tracks = track_data.loc[track_data.frame_filename == frame_fname]\n",
         "\n",
         "        if len(frame_tracks) == 0:\n",
         "            shutil.copy(in_fpath, out_fpath)\n",
