tracking.py: include frames without detections in the tracking phase (#2)
Frames without detections were being dropped in the detect phase which
means they never reached the tracking step and so were not included in
the results VIA project.

I'm not sure why the frames were being dropped but one effect is what
happens to the track ids.  If detection fails only in a single frame,
then the track is effectively not broken.  Including all frames, will
lead to more tracks found (which can be argued is also more correct).

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -644,6 +644,7 @@
         "    # Go through frame list\n",
         "    for frame_index, frame_fpath in enumerate(video_frames):\n",
         "        frame_id = str(frame_index)  # XXX: Why?  Why are we not using the int?\n",
+        "        frame_id_to_filename[frame_id] = frame_fpath\n",
         "\n",
         "        if frame_index % 1000 == 0:\n",
         "            _logger.info(\n",
@@ -690,11 +691,6 @@
         "                    min(float(pt[3]), img.shape[0]),\n",
         "                )\n",
         "                if coords[2] - coords[0] >= 1 and coords[3] - coords[1] >= 1:\n",
-        "                    if pred_num == 0:\n",
-        "                        # We found at least one prediction, so add the\n",
-        "                        # image to the filename dict.\n",
-        "                        frame_id_to_filename[frame_id] = frame_fpath\n",
-        "\n",
         "                    # XXX: original code had the option to load\n",
         "                    # face_id_score from a previous run but this makes\n",
         "                    # very little sense now?\n",
@@ -820,9 +816,8 @@
         "    # We only use one shot, hence only shot_id 0.\n",
         "    # XXX: Why are we using strings for int keys?\n",
         "    shot_id = '0'\n",
-        "    detections4svt = {shot_id: {}}\n",
+        "    detections4svt = {shot_id: {x: {} for x in frame_id_to_filename.keys()}}\n",
         "    for frame_id, detections_values in detections.items():\n",
-        "        detections4svt[shot_id][frame_id] = {}\n",
         "        for box_id, detection in detections_values.items():\n",
         "            detections4svt[shot_id][frame_id][box_id] = [\n",
         "                detection.track_id,\n",
