tracking.py: remove leftovers from unused identification (#5)

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -236,8 +236,7 @@
         "import tempfile\n",
         "import warnings\n",
         "from collections import defaultdict\n",
-        "from dataclasses import dataclass\n",
-        "from typing import Dict, List, Optional\n",
+        "from typing import Dict, List, NamedTuple, Optional\n",
         "\n",
         "import cv2\n",
         "import google.colab.drive\n",
@@ -580,20 +579,12 @@
         "    )\n",
         "\n",
         "\n",
-        "# Ideally this would be a NamedTuple and values couldn't change.\n",
-        "# However, in practice this is created in the detect phase and the\n",
-        "# id_score is filled in during the identify phase.  So we use\n",
-        "# dataclass and Optional.  Probably should be refactored.  But\n",
-        "# then, SVT also wants to access the values by position so\n",
-        "# dataclass brings its own problems.\n",
-        "@dataclass\n",
-        "class Detection:\n",
+        "class Detection(NamedTuple):\n",
         "    track_id: int\n",
         "    x: float\n",
         "    y: float\n",
         "    w: float\n",
         "    h: float\n",
-        "    id_score: Optional[float]\n",
         "\n",
         "\n",
         "# TODO: why frame_id_to_filename only includes frames with detections?\n",
@@ -683,10 +674,6 @@
         "                    min(float(pt[3]), img.shape[0]),\n",
         "                )\n",
         "                if coords[2] - coords[0] >= 1 and coords[3] - coords[1] >= 1:\n",
-        "                    # XXX: original code had the option to load\n",
-        "                    # face_id_score from a previous run but this makes\n",
-        "                    # very little sense now?\n",
-        "\n",
         "                    # Save detections to list ...\n",
         "                    a_detection = Detection(\n",
         "                        track_id=UNKNOWN_TRACK_ID_MARKER,\n",
@@ -694,7 +681,6 @@
         "                        y=coords[1],\n",
         "                        w=coords[2] - coords[0],\n",
         "                        h=coords[3] - coords[1],\n",
-        "                        id_score=None,\n",
         "                    )\n",
         "\n",
         "                    frame_detections[frame_id][str(pred_num)] = a_detection\n",
@@ -732,13 +718,9 @@
         "    detections4svt = {shot_id: {x: {} for x in frame_id_to_filename.keys()}}\n",
         "    for frame_id, detections_values in detections.items():\n",
         "        for box_id, detection in detections_values.items():\n",
-        "            detections4svt[shot_id][frame_id][box_id] = [\n",
-        "                detection.track_id,\n",
-        "                detection.x,\n",
-        "                detection.y,\n",
-        "                detection.w,\n",
-        "                detection.h,\n",
-        "            ]\n",
+        "            # `detection` is a named tuple but SVT will be modifying\n",
+        "            # it to add track_id, so convert to list.\n",
+        "            detections4svt[shot_id][frame_id][box_id] = list(detection)\n",
         "\n",
         "    # redirect sys.stdout to a buffer to capture the prints() in the code below\n",
         "    svt_stdout = io.StringIO()\n",
