tracking.py: replace ssd.pytorch with detectron2 (#4)

--- a/tracking.ipynb
+++ b/tracking.ipynb
@@ -219,9 +219,8 @@
       },
       "outputs": [],
       "source": [
-        "#@markdown\n",
+        "#@markdown This step can take a few of minutes to finish.\n",
         "\n",
-        "#^ this @markdown above is just so that we can set cellView to form\n",
         "\n",
         "import contextlib\n",
         "import glob\n",
@@ -267,20 +266,13 @@
         "from svt.siamrpn_tracker import siamrpn_tracker\n",
         "\n",
         "\n",
-        "## The ssd.pytorch \"package\" (cloned into ssd_pytorch so it can imported)\n",
-        "# When we import stuff from ssd.pytorch, it import data.coco which reads a\n",
-        "# `HOME/data/coco/coco_labels.txt` (even though we don't need it).  We create\n",
-        "# an empty file so it doesn't fail to import.  We also need to add `HOME` to\n",
-        "# `data/config.py` or it will try to read from `/root`.  See\n",
-        "# https://github.com/amdegroot/ssd.pytorch/issues/571\n",
-        "!git clone --quiet \\\n",
-        "  --single-branch --branch vgg-colab \\\n",
-        "  https://github.com/carandraug/ssd.pytorch.git ssd_pytorch/\n",
-        "!echo 'HOME = \"ssd_pytorch\"' >> ssd_pytorch/data/config.py\n",
-        "!mkdir ssd_pytorch/data/coco\n",
-        "!touch ssd_pytorch/data/coco/coco_labels.txt\n",
-        "from ssd_pytorch.data import base_transform\n",
-        "from ssd_pytorch.ssd import build_ssd"
+        "# Despite the `--quiet` flag, it still prints out a mysterious\n",
+        "# \"Preparing metadata (setup.py)\" message so just redirect stdout.\n",
+        "# Important messages should go to stderr anyway.\n",
+        "!pip install --quiet git+https://github.com/facebookresearch/detectron2.git > /dev/null\n",
+        "import detectron2.config\n",
+        "import detectron2.engine\n",
+        "import detectron2.model_zoo"
       ]
     },
     {
@@ -381,13 +373,10 @@
         "\n",
         "#@markdown A detection model is required.  You can either train\n",
         "#@markdown your own model, or you can use one of our pre-trained\n",
-        "#@markdown models for\n",
-        "#@markdown [face](https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/face-model-ssd300_CFbootstrap_85000.pth)\n",
-        "#@markdown or\n",
-        "#@markdown [body](https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/body-model-ssd300_BFbootstrapBissau4p5k_prebossou_best.pth).\n",
-        "#@markdown Either way, you will need to upload the model to your\n",
-        "#@markdown Google Drive and specify its path here.\n",
-        "DETECTION_MODEL = 'https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/face-model-ssd300_CFbootstrap_85000.pth'  #@param {type: \"string\"}\n",
+        "#@markdown models.  This variable is the URL, or file path, for a\n",
+        "#@markdown detectron2 model configuration (the URI and file path for\n",
+        "#@markdown the model weights are specified in the config file).\n",
+        "DETECTION_MODEL_CONFIG = 'https://thor.robots.ox.ac.uk/models/staging/chimp-tracking/faster_rcnn_R_50_FPN_1x-CFbootstrap.yaml'  #@param {type: \"string\"}\n",
         "\n",
         "#@markdown When the model detects a face or body, that detection is\n",
         "#@markdown made with a confidence score.  Detections with a confidence\n",
@@ -395,7 +384,7 @@
         "#@markdown threshold too high, you may loose some tracks but if you\n",
         "#@markdown set it too low you may gain false tracks that need to be\n",
         "#@markdown removed later.\n",
-        "DETECTION_THRESHOLD = 0.37  #@param {type: \"slider\", min: 0.0, max: 1.0, step: 0.01}"
+        "DETECTION_THRESHOLD = 0.6  #@param {type: \"slider\", min: 0.0, max: 1.0, step: 0.01}"
       ]
     },
     {
@@ -493,7 +482,7 @@
         "        return path\n",
         "\n",
         "\n",
-        "DETECTION_MODEL_PATH = local_path_for_model(DETECTION_MODEL)\n",
+        "DETECTION_MODEL_CONFIG_PATH = local_path_for_model(DETECTION_MODEL_CONFIG)\n",
         "TRACKING_MODEL_PATH = local_path_for_model(TRACKING_MODEL)\n",
         "\n",
         "\n",
@@ -590,13 +579,13 @@
         "# TODO: why frame_id_to_filename only includes frames with detections?\n",
         "# Can't we just check on the the list of detections that there's none?\n",
         "#\n",
-        "# TODO: why do we convert the frame number to a string fo rkeys in the\n",
+        "# TODO: why do we convert the frame number to a string for keys in the\n",
         "# dict?  Why not just use an int?\n",
         "#\n",
         "# TODO: why return frame_id_to_filename (can't that be deduced?)\n",
         "def detect(\n",
         "    video_frames: List[str],\n",
-        "    detection_model_path: str,\n",
+        "    detection_model_config_path: str,\n",
         "    visual_threshold: float,\n",
         "):\n",
         "    if visual_threshold < 0.0 or visual_threshold > 1.0:\n",
@@ -604,23 +593,15 @@
         "            'visual_threshold needs to be a number between 0.0 and 1.0'\n",
         "        )\n",
         "\n",
-        "    num_classes = 2  # +1 background\n",
-        "    net = build_ssd('test', 300, num_classes)\n",
-        "    net.load_state_dict(\n",
-        "        torch.load(detection_model_path, map_location=DEFAULT_DEVICE)\n",
-        "    )\n",
-        "    net.eval()\n",
-        "    net = net.to(DEFAULT_DEVICE)\n",
+        "    d2_cfg = detectron2.config.get_cfg()\n",
+        "    d2_cfg.merge_from_file(detection_model_config_path)\n",
+        "    d2_cfg.MODEL.ROI_HEADS.SCORE_THRESH_TEST = visual_threshold\n",
         "\n",
-        "    # XXX: Can't we do the benchmark just once and then save it?\n",
-        "    if USE_GPU:\n",
-        "        cudnn.benchmark = True\n",
-        "\n",
-        "    _logger.info('Finished loading model %s', detection_model_path)\n",
+        "    predictor = detectron2.engine.DefaultPredictor(d2_cfg)\n",
+        "    _logger.info('Finished loading model %s', detection_model_config_path)\n",
         "\n",
         "    _logger.info('Starting detection phase')\n",
         "\n",
-        "    # init this important variables\n",
         "    frame_id_to_filename: Dict[str, str] = {}\n",
         "    frame_detections: Dict[str, Dict[str, Detection]] = defaultdict(dict)\n",
         "\n",
@@ -638,54 +619,16 @@
         "\n",
         "        # Acquire image\n",
         "        img = cv2.imread(frame_fpath)\n",
+        "        outputs = predictor(img)\n",
         "\n",
-        "        # Apply transforms to the image\n",
-        "        transformed = base_transform(img, net.size, [104, 117, 123])\n",
-        "        transformed = torch.from_numpy(transformed).permute(2, 0, 1)\n",
-        "        transformed = Variable(transformed.unsqueeze(0))\n",
-        "        transformed = transformed.to(DEFAULT_DEVICE)\n",
-        "\n",
-        "        # Silence UserWarnings from ssd_pytorch/layers/box_utils.py \"An output\n",
-        "        # with one or more elements was resized since it had shape [X], which\n",
-        "        # does not match the required output shape [Y]. This behavior is\n",
-        "        # deprecated, and in a future PyTorch release outputs will not be\n",
-        "        # resized unless they have zero elements. You can explicitly reuse an\n",
-        "        # out tensor t by resizing it, inplace, to zero elements with\n",
-        "        # t.resize_(0).\"\n",
-        "        with warnings.catch_warnings():\n",
-        "            warnings.simplefilter(\"ignore\")\n",
-        "            net_out = net(transformed)  # run detector\n",
-        "        net_detections = net_out.data\n",
-        "\n",
-        "        # Scale each detection back up to the image\n",
-        "        scale = torch.Tensor(\n",
-        "            [img.shape[1], img.shape[0], img.shape[1], img.shape[0]]\n",
-        "        )\n",
-        "        pred_num = 0\n",
-        "        for i in range(net_detections.size(1)):\n",
-        "            j = 0\n",
-        "            while net_detections[0, i, j, 0] >= visual_threshold:\n",
-        "                score = net_detections[0, i, j, 0]\n",
-        "                pt = (net_detections[0, i, j, 1:] * scale).cpu().numpy()\n",
-        "                coords = (\n",
-        "                    max(float(pt[0]), 0.0),\n",
-        "                    max(float(pt[1]), 0.0),\n",
-        "                    min(float(pt[2]), img.shape[1]),\n",
-        "                    min(float(pt[3]), img.shape[0]),\n",
-        "                )\n",
-        "                if coords[2] - coords[0] >= 1 and coords[3] - coords[1] >= 1:\n",
-        "                    # Save detections to list ...\n",
-        "                    a_detection = Detection(\n",
-        "                        track_id=UNKNOWN_TRACK_ID_MARKER,\n",
-        "                        x=coords[0],\n",
-        "                        y=coords[1],\n",
-        "                        w=coords[2] - coords[0],\n",
-        "                        h=coords[3] - coords[1],\n",
-        "                    )\n",
-        "\n",
-        "                    frame_detections[frame_id][str(pred_num)] = a_detection\n",
-        "                    pred_num += 1\n",
-        "                j += 1\n",
+        "        for i, bbox in enumerate(outputs['instances'].get('pred_boxes')):\n",
+        "            frame_detections[frame_id][str(i)] = Detection(\n",
+        "                track_id=UNKNOWN_TRACK_ID_MARKER,\n",
+        "                x=float(bbox[0]),\n",
+        "                y=float(bbox[1]),\n",
+        "                w=float(bbox[2] - bbox[0]),\n",
+        "                h=float(bbox[3] - bbox[1]),\n",
+        "            )\n",
         "\n",
         "    _logger.info('Finished detections')\n",
         "    return frame_detections, frame_id_to_filename\n",
@@ -969,7 +912,7 @@
         "\n",
         "detections, frame_id_to_filename = detect(\n",
         "    video_frames,\n",
-        "    DETECTION_MODEL_PATH,\n",
+        "    DETECTION_MODEL_CONFIG_PATH,\n",
         "    DETECTION_THRESHOLD,\n",
         ")\n",
         "\n",
